--- a/_posts/2022-01-22-paper_growth_form/2022-01-22-paper_growth_form.Rmd
+++ b/_posts/2022-01-22-paper_growth_form/2022-01-22-paper_growth_form.Rmd
@@ -12,7 +12,7 @@ output:
     self_contained: false
 
 ---
-**Authors:** ***Yuri Souza**, Nacho Villar, Valesca Zipparro, Sérgio Nazareth, Mauro Galetti*
+**Authors:** ***Yuri Souza***, *Nacho Villar, Valesca Zipparro, Sérgio Nazareth, Mauro Galetti*
 
 
 ## **Abstract**
