--- a/_posts/2022-10-21-paper_tortoise_frugivory/2022-10-21-paper_tortoise_frugivory.Rmd
+++ b/_posts/2022-10-21-paper_tortoise_frugivory/2022-10-21-paper_tortoise_frugivory.Rmd
@@ -12,7 +12,7 @@ output:
     self_contained: true
 
 ---
-**authors:** *Lais Lautenschlager, Yuri Souza, Mauro Galetti*
+**Authors:** *Lais Lautenschlager*, ***Yuri Souza***, *Mauro Galetti*
 
 
 ## **Abstract**
