--- a/_posts/2024-01-08-paper_tapir_latrines/2024-01-08-paper_tapir_latrines.Rmd
+++ b/_posts/2024-01-08-paper_tapir_latrines/2024-01-08-paper_tapir_latrines.Rmd
@@ -6,7 +6,7 @@ categories:
   - Papers 
 #  - 2022
 date: 01-08-2024
-preview: tapir_latrines.png
+preview: tapir_latrine.png
 output:
   distill::distill_article:
     self_contained: false
