--- a/gallery.Rmd
+++ b/gallery.Rmd
@@ -1,9 +1,10 @@
 ---
 title: "Gallery"
 description: |
-  Still working on it :(
+  Still working on it
 output:
   distill::distill_article
+base_url: https://souzayuri.github.io/
 ---
 
 ```{r echo = FALSE}
@@ -11,3 +12,45 @@ knitr::opts_chunk$set(
   echo = FALSE
 )
 ```
+
+<head>
+
+<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.0/css/lightgallery.min.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.1-beta.0/js/lightgallery.min.js"></script>
+
+<!-- lightgallery plugins -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lg-fullscreen/1.2.1/lg-fullscreen.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lg-thumbnail/1.2.1/lg-thumbnail.min.js"></script>
+
+</head>
+
+```{css}
+#lightgallery > a > img:hover {
+   transform: scale(1.15, 1.15);
+   transition: 0.4s ease-in-out;
+   cursor: pointer;
+}
+```
+
+```{r include = FALSE}
+# Load the functions we have created
+source(here::here("R/functions.R"))
+```
+
+```{r}
+# Create layout
+withTags(
+  div(
+    class = "row",
+    id = "lightgallery",
+    tagList(
+      make_gallery_layout()
+    )
+  )
+)
+
+```
+
+<script type="text/javascript">
+    lightGallery(document.getElementById('lightgallery'));
+</script>
