--- a/gallery.Rmd
+++ b/gallery.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Gallery"
+title: "Some pictures of past fieldwork and collaborations"
 description: |
-  Some pictures of past fieldwork and collaborations
+   
 output:
   distill::distill_article
 base_url: https://souzayuri.github.io/
