--- a/gallery.Rmd
+++ b/gallery.Rmd
@@ -34,6 +34,7 @@ knitr::opts_chunk$set(
 
 ```{r include = FALSE}
 # Load the functions we have created
+if (!require("here")) install.packages("here")
 source(here::here("R/functions.R"))
 ```
 
