--- a/_posts/2023-09-06-atlantic_forest_infographic_project/atlantic_forest_infographic_project.Rmd
+++ b/_posts/2023-09-06-atlantic_forest_infographic_project/atlantic_forest_infographic_project.Rmd
@@ -3,7 +3,7 @@ title: "Animal species records history in the Atlantic Forest"
 description: |
   This was my final project for the course "Introduction to Infographics and Data Visualization".
 categories:
-  - Visualization
+  - Infographics
 author:
   - name: Yuri Souza
 date: 2023-09-06
